Refactor of socket functions
